<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="button0">0</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="buttonC">C</string>
    <string name="buttonCE">CE</string>
    <string name="buttonPlusMinus">+/-</string>
    <string name="buttonDivide">/</string>
    <string name="buttonPlus">+</string>
    <string name="buttonMinus">-</string>
    <string name="buttonMultiply">*</string>
    <string name="buttonEquals">=</string>
    <string name="buttonDecimal">.</string>
    <string name="DefaultWeight">1</string>
    <string name="EqualsWeight">2</string>
    <string name="ResultWeight">4</string>
    <string name="ResultWeightLandscape">5</string>
    <string name="ResultGravity">right</string>

</resources>
